Added sample notebook

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f83d817f-907f-463c-9c1a-800f9b21547a",
+   "id": "99ba6efb-abdf-48be-81b0-e9c14e8e4ef7",
    "metadata": {},
    "source": [
-    "walkthru sample notebook"
+    "## walkthru sample notebook"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d1ac902e-781b-45b5-a56c-4b7cc0e3dbc8",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "af757801-1faa-43f0-a1ef-da68be8cb553",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "5eee7bff-f899-48ad-b108-ff99b5c7be37",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "array([0.84147098, 0.        , 1.        ])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
